[package]
name = "xcm_grpc_lib"
version = "0.1.0"
edition = "2021"
description = "xcm grpc lib"
license = "Apache-2.0"
homepage = "https://github.com/Enlightenments/xcm_grpc_lib"
repository = "https://github.com/Enlightenments/xcm_grpc_lib"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
